--- a/doc/设定集.md
+++ b/doc/设定集.md
@@ -3,3 +3,15 @@
 - 主人公的部分属性和遭遇由骰子控制；行动由作者根据主人公属性及当前条件，结合骰子决定
 - 其他人物属性和行动由作者设定，并受主人公影响
 
+![[设定集 2023-07-31 10.38.53.excalidraw]]
+
+
+# 团体-家族
+
+
+
+# 性格
+
+
+# 关系-亲密度
+
