--- a/doc/设定集.md
+++ b/doc/设定集.md
@@ -1,5 +1,21 @@
 # 人物
-人物分为主人公和其他：
-- 主人公的部分属性和遭遇由骰子控制；行动由作者根据主人公属性及当前条件，结合骰子决定
-- 其他人物属性和行动由作者设定，并受主人公影响
+1. 人物分为主人公和其他：
+	- 主人公的部分属性和遭遇由骰子控制；行动由作者根据主人公属性及当前条件，结合骰子决定
+	- 其他人物属性和行动由作者设定，并受主人公影响
 
+2. 由自定义属性和随机属性组成
+	1. 自定义属性：姓名，身高体重，50点属性值
+	2. 随机属性：随机属性分级，自0向上增加，高级属性受低级属性影响，同级属性之间互不影响，低级属性不受高级属性的影响；
+		0. 属性等级：属性（属性范围）
+		1. 0：命运（0-100）20+D80
+			- 0-20：会夭折的水平
+			- 20-30：小概率坏事会发生，走路可能会平地摔成骨折
+			- 30-40:  做坏事大概率会被发现，大概就是出门必然会遇到不想碰到的人的水平吧
+			- 50-70：正常人的水平
+			- 70-90：抽奖基本是一等奖
+			- 100：只要符合逻辑，心想事成
+		3. 1：健康(0-100) 命运*20%+D80
+		4. 2：外貌（0-100）健康20%+D80
+		5. 2：力量（0-100）健康20%+D80+体重%20
+		6. 2：敏捷（0-100）健康20%+D80-体重%20
+		7. 2：精神（0-100）
